# apollo-mcp-server

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_SECTION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASE_CHECKLIST.md  REVIEW.md  agent-config.json  codecov.yml  codefresh.yml  config.yaml  flake.nix  knope.toml  mercedes-demo-mcp.graphql  rust-toolchain.toml  server.json
.changeset/: accept_logging_setlevel_as_noop.md  add_allow_anonymous_mcp_discovery_setting_to_allow_unauthenticated_access_to_mcp_discovery_methods_eg_toolslist.md  add_configurable_mcp_initialize_instructions.md  add_configurable_scope_enforcement_via_scope_mode_to_suport_flexible_matching_strategies_require_any_disabled.md  add_default_jwk_algorithm_fallback.md  add_discovery_headers_config_to_auth.md  add_exponential_retry_backoffs_during_initial_collection_fetch.md  add_hot_reloading_for_rhai_scripts.md  add_issuer_validation.md  add_mcp_prompts_support.md  add_per_issuer_jwks_cache.md  (+70 more)
crates/apollo-mcp-registry/: Cargo.toml
crates/apollo-mcp-registry/src/: files.rs  platform_api.rs  uplink.rs
crates/apollo-mcp-registry/src/platform_api/: platform-api.graphql
crates/apollo-mcp-registry/src/platform_api/operation_collections/: collection_poller.rs  error.rs  event.rs  operation_collection_entries_query.graphql  operation_collections.graphql
crates/apollo-mcp-registry/src/uplink/persisted_queries/: event.rs  manifest_poller.rs
crates/apollo-mcp-registry/src/uplink/schema/: event.rs  schema_stream.rs
crates/apollo-mcp-rhai/: Cargo.toml
crates/apollo-mcp-rhai/src/: engine.rs  lib.rs  shared_mut.rs
crates/apollo-mcp-rhai/src/checkpoints/: mod.rs  on_execute_graphql_operation.rs  on_startup.rs
crates/apollo-mcp-rhai/src/functions/: env.rs  http.rs  json.rs  mod.rs  regex.rs  sha256.rs
crates/apollo-mcp-rhai/src/types/: error_code.rs  header_map.rs  http_parts.rs  mod.rs  promise.rs  response.rs
crates/apollo-mcp-runtime/: Cargo.toml
crates/apollo-mcp-runtime/src/: config.rs  filtering_exporter.rs  lib.rs  telemetry.rs
crates/apollo-mcp-server/: Cargo.toml  build.rs  telemetry.toml
crates/apollo-mcp-server/examples/sample_graphs/: graphs.yaml
crates/apollo-mcp-server/examples/sample_graphs/north/: schema.graphql
crates/apollo-mcp-server/examples/sample_graphs/south/: schema.graphql
crates/apollo-mcp-server/src/: apps.rs  auth.rs  cors.rs  custom_scalar_map.rs  env_expansion.rs  errors.rs  event.rs  explorer.rs  graphql.rs  headers.rs  health.rs  host_validation.rs  introspection.rs  json_schema.rs  lib.rs  main.rs  operation_collection.rs  operation_collection_polling_query.graphql  operation_collection_query.graphql  operations.rs  prompts.rs  runtime.rs  schema_tree_shake.rs  scope_requirements.rs  server.rs  server_info.rs  states.rs  telemetry_attributes.rs  test_violations.rs
crates/apollo-mcp-server/src/apps/: app.rs  execution.rs  manifest.rs  mod.rs  resource.rs  tool.rs
crates/apollo-mcp-server/src/auth/: networked_key_resolver.rs  networked_token_validator.rs  protected_resource.rs  valid_token.rs  www_authenticate.rs
crates/apollo-mcp-server/src/graphs/: admin.rs  context.rs  credentials.rs  dispatch.rs  factory.rs  local_dir.rs  mod.rs  schema_oci.rs  server.rs  staging.rs
crates/apollo-mcp-server/src/graphs/manifest/: local.rs  mod.rs  oci.rs  types.rs
crates/apollo-mcp-server/src/introspection/: minify.rs  tools.rs
crates/apollo-mcp-server/src/introspection/snapshots/: apollo_mcp_server__introspection__minify__tests__minify_schema.snap
crates/apollo-mcp-server/src/introspection/tools/: description.rs  execute.rs  introspect.rs  search.rs  validate.rs
crates/apollo-mcp-server/src/introspection/tools/introspect/: minify.rs
crates/apollo-mcp-server/src/introspection/tools/snapshots/: apollo_mcp_server__introspection__tools__search__tests__schema_traverse.snap  apollo_mcp_server__introspection__tools__search__tests__search_tool.snap
crates/apollo-mcp-server/src/introspection/tools/testdata/: schema.graphql
crates/apollo-mcp-server/src/operations/: annotation_overrides.rs  execution.rs  operation.rs  operation_source.rs  private_fields.rs  raw_operation.rs  schema_walker.rs
crates/apollo-mcp-server/src/operations/schema_walker/: name.rs  output.rs
crates/apollo-mcp-server/src/operations/schema_walker/snapshots/: apollo_mcp_server__operations__schema_walker__output__tests__nested_object_output_schema.snap  apollo_mcp_server__operations__schema_walker__output__tests__private_fields_excluded_from_output_schema.snap  apollo_mcp_server__operations__schema_walker__output__tests__simple_query_output_schema.snap
crates/apollo-mcp-server/src/prompts/: config.rs  mod.rs  prompt_file.rs  render.rs  store.rs
crates/apollo-mcp-server/src/rhai/: checkpoints.rs  engine.rs  mod.rs  shared_mut.rs  types.rs
crates/apollo-mcp-server/src/rhai/checkpoints/: on_execute_graphql_operation.rs  on_startup.rs
crates/apollo-mcp-server/src/rhai/functions/: env.rs  http.rs  json.rs  mod.rs  regex.rs  sha256.rs
crates/apollo-mcp-server/src/rhai/types/: error_code.rs  header_map.rs  http_parts.rs  mod.rs  promise.rs  response.rs
crates/apollo-mcp-server/src/runtime/: config.rs  env_expansion.rs  filtering_exporter.rs  graphos.rs  graphs_source.rs  introspection.rs  logging.rs  operation_source.rs  overrides.rs  rhai.rs  schema_source.rs  telemetry.rs
crates/apollo-mcp-server/src/runtime/logging/: defaults.rs  format_style.rs  trace_id_format.rs
crates/apollo-mcp-server/src/runtime/manifest/: local.rs  mod.rs  types.rs
crates/apollo-mcp-server/src/server/: states.rs
crates/apollo-mcp-server/src/server/states/: configuring.rs  operations_configured.rs  running.rs  schema_configured.rs  starting.rs  telemetry.rs
crates/apollo-mcp-server/src/states/: configuring.rs  operations_configured.rs  running.rs  schema_configured.rs  starting.rs
crates/apollo-mcp-server/tests/: collection_sync.rs  multi_graph.rs  otlp_https_export.rs
crates/mcp-apollo-registry/: Cargo.toml
crates/mcp-apollo-registry/src/uplink/persisted_queries/: manifest_poller.rs
(+170 files in other folders)
