[workspace]
resolver = "2"
members = [
  "crates/apollo-mcp-runtime",
  "crates/apollo-mcp-server",
  "crates/apollo-mcp-registry",
  "crates/apollo-schema-index",
]

[workspace.package]
authors = ["Apollo <opensource@apollographql.com>"]
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/apollographql/apollo-mcp-server"
rust-version = "1.89.0"
version = "1.1.1"

[workspace.dependencies]
apollo-compiler = "1.27.0"
apollo-federation = "2.1.3"
futures = { version = "0.3.31", features = ["thread-pool"] }
insta = { version = "1.43.1", features = [
  "json",
  "redactions",
  "yaml",
  "glob",
] }
reqwest = { version = "0.12.15", default-features = false, features = [
  "gzip",
  "json",
  "native-tls-vendored",
] }
rstest = "0.25.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = [
  "fs",
  "io-std",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-stream = "0.1"
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
url = { version = "2.4", features = ["serde"] }

[workspace.metadata]
crane.name = "apollo-mcp"

# This allows usage of coverage(off) attribute without causing a linting error.
# This attribute doesn't work in stable Rust yet and can be removed whenever it does.
# See https://github.com/apollographql/apollo-mcp-server/pull/372
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
exit = "deny"
expect_used = "deny"
indexing_slicing = "deny"
unwrap_used = "deny"
panic = "deny"

[package]
name = "apollo-mcp"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
apollo-mcp-server = {path = "crates/apollo-mcp-server"}
apollo-mcp-runtime = {path = "crates/apollo-mcp-runtime"}
apollo-mcp-registry = {path = "crates/apollo-mcp-registry"}
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive", "env"] }
schemars = { version = "1.0.1", features = ["url2"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[[bin]]
name = "mcp-server"
path = "bin/main.rs"

[[bin]]
name = "config-schema"
path = "bin/config_schema.rs"
test = false
