[package]
name = "apollo-mcp-registry"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

description = "Registry providing schema and operations to the MCP Server"

[dependencies]
derive_more = { version = "2.0.1", default-features = false, features = [
  "from",
  "display",
] }
educe = "0.6.0"
futures.workspace = true
graphql_client = "0.14.0"
notify = "8.0.0"
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower = "0.5.2"
backoff = { version = "0.4.0", features = ["tokio"] }
tracing.workspace = true
url.workspace = true
uuid = { version = "1.16.0", features = ["serde", "v4"] }
tracing-subscriber.workspace = true

[dev-dependencies]
insta.workspace = true
test-log = { version = "0.2.16", default-features = false, features = [
  "trace",
] }
tracing-core.workspace = true
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
wiremock = "0.6.3"

[lints]
workspace = true
