[package]
name = "apollo-mcp-rhai"
description = "Rhai scripting support for Apollo MCP Server"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
hex = "0.4.3"
http = "1.3.1"
parking_lot = "0.12.5"
regex = "1.11.1"
reqwest.workspace = true
rhai = { version = "1.24.0", features = ["sync", "serde"] }
rmcp = { version = "0.16", features = ["server"] }
serde_json.workspace = true
sha2 = "0.10.9"
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
mockito = "1.7.0"
tracing-test = "0.2.5"

[features]
experimental_rhai = []

[lints]
workspace = true
