[package]
name = "apollo-mcp-runtime"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.98"
apollo-mcp-registry = { path = "../apollo-mcp-registry" }
apollo-mcp-server = { path = "../apollo-mcp-server" }
figment = { version = "0.10.19", features = ["env", "yaml"] }
headers = "0.4.1"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = [
  "grpc-tonic",
  "tonic",
  "http-proto",
  "metrics",
  "trace",
] }
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = [
  "spec_unstable_metrics_views",
] }
reqwest.workspace = true
schemars = { version = "1.0.1", features = ["url2"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["now"] }
figment = { version = "0.10.19", features = ["test"] }
insta.workspace = true
mockito = "1.7.0"
opentelemetry_sdk = { version = "0.30.0", features = ["testing"] }
rstest.workspace = true
tokio.workspace = true
tower = "0.5.2"