[package]
name = "apollo-mcp-server"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
apollo-compiler.workspace = true
apollo-federation.workspace = true
apollo-mcp-registry = { path = "../apollo-mcp-registry" }
apollo-schema-index = { path = "../apollo-schema-index" }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-otel-metrics = "0.12.0"
axum-tracing-opentelemetry = "0.29.0"
bon = "3.6.3"
futures.workspace = true
headers = "0.4.1"
http = "1.3.1"
humantime-serde = "1.1.1"
jsonschema = "0.33.0"
jsonwebtoken = "9"
jwks = "0.4.0"
lz-str = "0.2.1"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = [
  "spec_unstable_metrics_views",
] }
regex = "1.11.1"
reqwest-middleware = "0.4.2"
reqwest-tracing = { version = "0.5.8", features = ["opentelemetry_0_30"] }
reqwest.workspace = true
rmcp = { version = "0.8", features = [
  "server",
  "transport-io",
  "transport-sse-server",
  "transport-streamable-http-server",
] }
schemars = { version = "1.0.1", features = ["url2"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = "0.7.15"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["now"] }
figment = { version = "0.10.19", features = ["test"] }
insta.workspace = true
mockito = "1.7.0"
opentelemetry_sdk = { version = "0.30.0", features = ["testing"] }
rstest.workspace = true
tokio.workspace = true
tower = "0.5.2"
tracing-test = "0.2.5"

[build-dependencies]
cruet = "0.15.0"
prettyplease = "0.2.37"
quote = "1.0.40"
serde.workspace = true
syn = "2.0.106"
toml = "0.9.5"

[lints]
workspace = true