[package]
name = "mcp-apollo-registry"
version = "0.1.0"
edition = "2024"
authors = ["Apollo <opensource@apollographql.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/apollographql/mcp-apollo"
description = "Registry providing schema and operations to the MCP Server"

[dependencies]
futures = "0.3"
graphql_client = "0.14.0"
notify = "8.0.0"
parking_lot = "0.12"
reqwest = { version = "0.12.15", features = ["json", "gzip"] }
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["fs", "sync", "time", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tower = "0.5.2"
tracing = "0.1"
url = "2.4"

[lints]
workspace = true
